--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/emanu/Documents/Eclipse/facturacion-electronica/jdom-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="jdom-2.0.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
